sending email notification functionality implemented using clelery and command based

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 django-environ = "*"
 drf-yasg = "*"
 djangorestframework-simplejwt = "*"
+celery = "*"
 
 [dev-packages]
 
